--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Template</title>
-  </head>
-  <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
-  </body>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>MDes Qinghua</title>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/main.css" />
+</head>
+
+<body>
+
+    <h1 class="center">Decision Maker</h1>
+    <p class="center">The algorithm is based on QUANTIFYING USER EXPERIENCE</p>
+
+
+    
+    <div id="parent" class="center">
+        <h2 id="a0" class="center" >哪种类型数据</h2>
+        <span id="a1" href="javascript:void(0);">连续型</span>
+        <span id="a2" href="javascript:void(0);">离散型</span>
+        </div>
+        
+
+    <script type="text/javascript" src="js/select.js"></script>
+</body>
+
 </html>
