--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MDes Qinghua</title>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <link rel="stylesheet" href="css/main.css" />
+    <script type="text/javascript" src="js/calculating.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <h2 id="a0" class="center">哪种类型数据</h2>
         <button id="a1" href="javascript:void(0);">连续型</button>
         <button id="a2" href="javascript:void(0);">离散型</button>
-       
+
         <h2 class="center">需要使用的是：</h2>
         <h2 id="decision"></h2>
 
@@ -28,6 +29,28 @@
 
 
     <script type="text/javascript" src="js/select.js"></script>
+
+
+    
+
+
+    <form>
+        <div class="div">
+            <div><span>jQuery简单计算器</span></div>
+            <div>第一个数:<input type="text" id="num1"></div>
+            <div>第二个数:<input type="text" id="num2"></div>
+            <div><input type="button" value=" + " id="jia"><input type="button" value=" - " id="jian"><input
+                    type="button" value=" * " id="cheng"><input type="button" value=" / " id="chu"></div>
+            <div>结果:<input type="text" id="reset" /></div>
+        </div>
+    </form>
+
+
+
+
+
+
+
 </body>
 
 </html>
