--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <div class="container">
         <div class="row">
+
+
+
+
             <!-- //decision maker -->
             <div class="col-sm-12 dark">
                 <p class="center">1.1 Decision Maker</p>
@@ -36,7 +40,29 @@
             </div>
 
 
+            <div>
+                <button id="q01" href="javascript:void(0);">q01</button>
+                <button id="q02" href="javascript:void(0);">q02</button>
+                <button id="q03" href="javascript:void(0);">q03</button>
+                <button id="q04" href="javascript:void(0);">q04</button>
+                <button id="q05" href="javascript:void(0);">q05</button>
+                <button id="q06" href="javascript:void(0);">q06</button>
+                <button id="q07" href="javascript:void(0);">q07</button>
+                <button id="q08" href="javascript:void(0);">q08</button>
+                <button id="q09" href="javascript:void(0);">q09</button>
+                <button id="q10" href="javascript:void(0);">q10</button>
+                <button id="q11" href="javascript:void(0);">q11</button>
+                <button id="q12" href="javascript:void(0);">q12</button>
+                <button id="q13" href="javascript:void(0);">q13</button>
+                <button id="q14" href="javascript:void(0);">q14</button>
+                <button id="q15" href="javascript:void(0);">q15</button>
+                <button id="q16" href="javascript:void(0);">q16</button>
+                <button id="q17" href="javascript:void(0);">q17</button>
+                <button id="q18" href="javascript:void(0);">q18</button>
+                <button id="q19" href="javascript:void(0);">q19</button>
+                <button id="q20" href="javascript:void(0);">q20</button>
 
+            </div>
 
             <!-- //Ajax 方法载入-->
             <div id="div1" class="col-sm-12 blue">
@@ -44,6 +70,10 @@
 
                 <button>获取外部内容吧</button>
             </div>
+
+
+
+
 
 
         </div>
