--- a/statistics/01.html
+++ b/statistics/01.html
@@ -1,12 +1,10 @@
-<script>
-    $("#div2").load("head_Math_js.html");
-</script>
-
-<div class="head">
-
-
-
+<div id="div3">
+    ffff
 </div>
+
+<script>
+    $("#div3").load("head_Math_js.html");
+</script>
 
 <h2>01 Wald</h2>
 <div>
