--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MDes Qinghua</title>
+    <title>QX | A Quantitative Analysis Tool</title>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/loadAjax.js"></script>
 
@@ -18,7 +18,8 @@
     <div class="container">
         <div class="row">
 
-
+            <h1>QX</h1>
+            
 
             <!-- //decision maker -->
             <div class="col-sm-12 dark">
